more codes update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>To-Do List</h1>
+        <h1>Esper To-Do App</h1>
         <div class="datetime-section">
             <p id="datetime"></p>
         </div>
@@ -29,13 +29,9 @@
         </div>
         <ul id="taskList"></ul>
         <ul id="previousTasksList"></ul>
-        <div class="login-section">
-            <!-- Google login button with icon -->
-            <button id="googleLoginBtn"><i class="fab fa-google"></i> Login with Google</button>
-            <!-- Facebook login button with icon -->
-            <button id="facebookLoginBtn"><i class="fab fa-facebook"></i> Login with Facebook</button>
-            <!-- Apple login button with icon -->
-            <button id="appleLoginBtn"><i class="fab fa-apple"></i> Login with Apple</button>
+        <div class="sign-out-section">
+            <!-- Sign out button with icon -->
+            <button id="signOutBtn"><i class="fas fa-sign-out-alt"></i> Sign Out</button>
         </div>
         <audio id="audio">
             <source src="./deep-voiced-congratulations.mp3" type="audio/mpeg" />
