--- a/login.html
+++ b/login.html
@@ -4,21 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login or Sign Up</title>
-    <!-- Add your CSS stylesheet link here -->
+    <!-- Include Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="./login.css">
 </head>
 <body>
     <div class="container">
         <h1>Login or Sign Up</h1>
         <div class="login-section">
-            <button id="facebookLoginBtn" onclick="redirectTo('facebook')">Login with Facebook</button>
-            <button id="googleLoginBtn" onclick="redirectTo('google')">Login with Google</button>
-            <button id="appleLoginBtn" onclick="redirectTo('apple')">Login with Apple</button>
-            <button id="emailLoginBtn" onclick="redirectTo('email')">Login with Email</button>
-            <button id="emailSignUpBtn" onclick="redirectTo('signup')">Sign Up with Email</button>
+            <!-- Facebook login button with Font Awesome icon -->
+            <button id="facebookLoginBtn" onclick="redirectTo('facebook')">
+                <i class="fab fa-facebook"></i> Login with Facebook
+            </button>
+            <!-- Google login button with Font Awesome icon -->
+            <button id="googleLoginBtn" onclick="redirectTo('google')">
+                <i class="fab fa-google"></i> Login with Google
+            </button>
+            <!-- Apple login button with Font Awesome icon -->
+            <button id="appleLoginBtn" onclick="redirectTo('apple')">
+                <i class="fab fa-apple"></i> Login with Apple
+            </button>
+            <!-- Email login button with Font Awesome icon -->
+            <button id="emailLoginBtn" onclick="redirectTo('email')">
+                <i class="fas fa-envelope"></i> Login with Email
+            </button>
+            <!-- Sign Up button with Font Awesome icon -->
+            <button id="emailSignUpBtn" onclick="redirectTo('signup')">
+                <i class="fas fa-user-plus"></i> Sign Up with Email
+            </button>
         </div>
     </div>
 
-    <!-- Add your JavaScript file link here -->
-    <script src="script.js"></script>
+    <script src="./login.js"></script>
 </body>
 </html>
